recursion.lessons.recursion.koch.Koch.scala.error
Koch:24: error: missing arguments for method avance in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
		avance length
                ^